Changed Converter interface: Format is no longer part of the convert() and serialize() signature, but must be specified via Converter.setFormat(String)