@@ -9,81 +9,18 @@ import com.google.gwt.i18n.client.NumberFormat;
  * @author $LastChangedBy: harald.pehl $
  * @version $LastChangedRevision: 7 $
  */
-public class LongConverter extends AbstractConverter<Long>
+public class LongConverter extends NumberConverter<Long>
 {
-    /**
-     * Converts the specified value to long.
-     * 
-     * @param value
-     *            The string to be converted. May be <code>null</code>.
-     * @param format
-     *            Must be a valid number format or {@code null}
-     * @return {@code null} if the value is {@code null}, empty or in the wrong
-     *         format, otherwise the converted long
-     * @see name.pehl.piriti.converter.client.Converter#convert(java.lang.String,
-     *      java.lang.String)
-     */
     @Override
-    public Long convert(String value, String format)
+    protected Long convertWithoutFormat(String value)
     {
-        if (isValid(value))
-        {
-            try
-            {
-                if (format == null)
-                {
-                    return Long.valueOf(value);
-                }
-                else
-                {
-                    return parseLong(value, format);
-                }
-            }
-            catch (NumberFormatException e)
-            {
-                return null;
-            }
-        }
-        return null;
-    }
-
-
-    /**
-     * Parsing happens in an extra method so it can be overwritten in unit
-     * tests.
-     * 
-     * @param value
-     * @param format
-     * @return
-     */
-    protected Long parseLong(String value, String format)
-    {
-        NumberFormat numberFormat = NumberFormat.getFormat(format);
-        return new Long((long) numberFormat.parse(value));
+        return Long.valueOf(value);
     }
 
 
     @Override
-    public String serialize(Long value, String format)
+    protected Long newInstance(double parsed)
     {
-        if (value != null && format != null)
-        {
-            return serializeLong(value, format);
-        }
-        return super.serialize(value, format);
-    }
-
-
-    /**
-     * Serialization happens in an extra method so it can be overwritten in unit
-     * tests.
-     * 
-     * @param value
-     * @param format
-     */
-    protected String serializeLong(Long value, String format)
-    {
-        NumberFormat numberFormat = NumberFormat.getFormat(format);
-        return numberFormat.format(value);
+        return new Long((long) parsed);
     }
 }
